journal routes working locally
